*7961* (revert -- press specific)

--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -38,6 +38,7 @@
 	<message key="common.active">Active</message>
 	<message key="common.add">Add</message>
 	<message key="common.addSelf">Add Self</message>
+	<message key="common.name">Name</message>
 	<message key="common.all">All</message>
 	<message key="common.alphaList">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</message>
 	<message key="common.titleSmallWords">of a the and an or nor but is if then else when at from by on off for in out over to into with</message>
