--- a/ojs/docs/README
+++ b/ojs/docs/README
@@ -27,7 +27,7 @@ System Requirements
 -------------------
 Recommended server requirements:
 
-	* PHP >= 5.0; Microsoft IIS requires PHP 5.x
+	* PHP >= 5.2
 	* MySQL >= 3.23.23 (including MySQL 4.x) or PostgreSQL >= 7.1
 	  (including PostgreSQL 8.x)
 	* Apache >= 1.3.2x or >= 2.0.4x or Microsoft IIS 6
