--- a/pkp-lib/locale/en_US/submission.xml
+++ b/pkp-lib/locale/en_US/submission.xml
@@ -246,6 +246,11 @@
 	<message key="submission.comments.subject">Subject</message>
 	<message key="submission.complete">Complete</message>
 	<message key="submission.copyedited">Copyedited</message>
+	<message key="submission.coverage">Coverage Information</message>
+	<message key="submission.coverage.tip">The following fields provide information about your submission's coverage.  Coverage may include chronologcal periods (1920-1940, 17th century), and geographical locations ('Boston, MA', or 'Northern England').  If you wish, you may use the sample coverage field to include a relevant example from your own work.</message>
+	<message key="submission.coverage.chron">Chronological or historical coverage</message>
+	<message key="submission.coverage.geo">Geo-spatial coverage</message>
+	<message key="submission.coverage.sample">Sample coverage</message>
 	<message key="submission.done">Done</message>
 	<message key="submission.dueDate">Due Date</message>
 	<message key="submission.due">Due</message>
@@ -355,6 +360,8 @@
 	<message key="submission.review">Review</message>
 	<message key="submission.reviewed">Reviewed</message>
 	<message key="submission.reviewVersion">Review Version</message>
+	<message key="submission.rights">Rights</message>
+	<message key="submission.rights.tip">If you wish, you may enter a brief statement about the access rights held in or over this submission.</message>
 	<message key="submissions.active">Active</message>
 	<message key="submissions.archived">Archived</message>
 	<message key="submission.saveMetadata">Save Metadata</message>
@@ -366,6 +373,10 @@
 	<message key="submissions.queued">Queued</message>
 	<message key="submissions.queuedUnassigned">Awaiting assignment</message>
 	<message key="submissions.ruling">Ruling</message>
+	<message key="submission.source">Source</message>
+	<message key="submission.source.tip">Is this submission derived from another resource? If so, you may enter a URL or description of that resource.</message>
+	<message key="submission.subjectClass">Submission Subject</message>
+	<message key="submission.subjectClass.tip">Please describe your submission using a few key phrases.  You may refine the subject with specific keywords in a latter part of the form.</message>
 	<message key="submissions.submit">Submit</message>
 	<message key="submissions.submitted">Submitted</message>
 	<message key="submission.start">Start</message>
@@ -373,12 +384,16 @@
 	<message key="submission.submissionManuscript">Submission Manuscript</message>
 	<message key="submission.submissionReview">Submission Review</message>
 	<message key="submission.submitter">Submitter</message>
+	<message key="submission.submit.metadataForm">Additional Refinements</message>
+	<message key="submission.submit.metadataForm.tip">Add additional information for your submission.  Press 'enter' after each term.</message>
+	<message key="submission.submit.titleAndSummary">Title and Summary</message>
 	<message key="submission.summary">Summary</message>
 	<message key="submission.supplementaryFiles">Supplementary Files</message>
 	<message key="submission.supportingAgencies">Supporting Agencies</message>
 	<message key="submission.currentAgencies">Current Agencies</message>
 	<message key="submission.indexingInformation">Indexing Information</message>
 	<message key="submission.titleAndAbstract">Title and Abstract</message>
+	<message key="submission.type.tip"><![CDATA[The submission type is usually one of 'image', 'text', or other multimedia types including 'software' or 'interactive'.  Please choose the one most relevant for your submission.  Examples may be found at <a target="_blank" href="http://dublincore.org/documents/2001/04/12/usageguide/generic.shtml#type">http://dublincore.org/documents/2001/04/12/usageguide/generic.shtml#type</a>]]></message>
 	<message key="submission.underway">Underway</message>
 	<message key="submission.uploadFileTo">Upload file to</message>
 	<message key="submission.createRemote">Create remote</message>
